--- a/binary-tree/package.json
+++ b/binary-tree/package.json
@@ -13,6 +13,7 @@
     "antd": "^3.9.2",
     "css-loader": "^1.0.0",
     "d3": "^3.5.17",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0"
   },
   "devDependencies": {
@@ -23,6 +24,8 @@
     "babel-preset-react": "^6.24.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
